# DVC-Manager

./: .env  .gitattributes  .gitignore  README.md  docker-compose.yaml
api/: Dockerfile  app.py  config.py  extentions.py  requirements.txt
api/admin/src/: pipe_executor.py
api/auth/: auth.py
api/datasets/: controllers.py
api/lib/access/: authenticate.py  linux_grabber.py
api/lib/models/: User.py  password_manager.py
client/: Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.js
client/src/components/: Copyright.js  Counter.jsx  Footer.js  Header.js
client/src/pages/: Album.js  SignIn.js
dvc_listener/: .env  .gitignore  CMakeLists.txt  Dockerfile  main.cpp  main2.cpp  main3.cpp
dvc_listener/3rd/inotify-cpp/: CMakeLists.txt
dvc_listener/3rd/inotify-cpp/src/: NotifierBuilder.cpp
dvc_listener/data/: config.yaml
dvc_listener/src/core/: IWorker.h  Listener.cpp  Listener.h  MetaBuilder.cpp  MetaBuilder.h  Sender.cpp  Sender.h
dvc_listener/src/core/workflow/: BaseWorkflow.cpp
dvc_listener/src/entities/: DVCEvent.h  DVCMeta.h
dvc_listener/src/utils/: common.h
dvc_manager/: Dockerfile  app.py
dvc_manager/auth/: auth.py  password_manager.py
dvc_manager/auth/templates/auth/: login.html
dvc_manager/datasets/: controllers.py  datasets.py
dvc_manager/templates/: base.html
nginx/: Dockerfile  project.conf
